[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["tankadoko <atsushi.startup.c@gmail.com>"]
readme = "README.md"
packages = [{include = "python_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.7.0"
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
